# flashcard-llm

./: .dockerignore  .gitignore  Dockerfile  README.md  flashcards.csv  flashcards_v2.csv  netlify.toml  pyproject.toml  requirements.txt  sample_input.txt
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.tsx
frontend/src/components/: ConfigPanel.tsx  FlashcardGenerator.tsx  TextInput.tsx
frontend/src/services/: api.ts
frontend/src/styles/: main.scss
frontend/src/utils/: logger.ts
functions/: api.py  python_ping.py
netlify/functions/: api.py  hello.py  ping.js
src/: api.py  generate_flashcards.py  logger.py
